Update 'f0e0780cv-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:0965bd02ed74c957bfc3243cd0e9b68777a812c2@sha256:375f199d9c1e206135cf486c4d03a549817fded00783fc97124e70cc7b11a2a7

--- a/components/f0e0780cv-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/f0e0780cv-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: f0e0780cv-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:0965bd02ed74c957bfc3243cd0e9b68777a812c2@sha256:375f199d9c1e206135cf486c4d03a549817fded00783fc97124e70cc7b11a2a7
+          name: container-image
